lehke 2 upravy endpointu edit

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -68,3 +68,7 @@ spring:
   h2:
     console:
       enabled: true
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
