uprava formulaře3 pridani fota

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -49,6 +49,9 @@ grails:
       codec: html
   controllers:
     defaultScope: singleton
+    upload:
+      maxFileSize: 10MB   # Maximální velikost jednoho souboru
+      maxRequestSize: 10MB # Maximální velikost celého requestu
   gorm:
     autowire: true
 dataSource:
