zprovoznění přidávaní/ukladání fotek

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -50,8 +50,8 @@ grails:
   controllers:
     defaultScope: singleton
     upload:
-      maxFileSize: 10MB   # Maximální velikost jednoho souboru
-      maxRequestSize: 10MB # Maximální velikost celého requestu
+      maxFileSize: 10485760
+      maxRequestSize: 10485760
   gorm:
     autowire: true
 dataSource:
